@startuml code-pet-states
skinparam state {
  BackgroundColor<<looping>> #D4E6F1
}

title Code Pet — State Machine

[*] --> idle : SessionStart\n//awaken//\n(only when zero state)

state "idle" as idle <<looping>> : Looping (4 frames, 1600ms)
state "working" as working <<looping>> : Looping (4 frames, 1200ms)
state "planning" as planning <<looping>> : Looping (4 frames, 1200ms)
state "waiting_for_action" as waiting_for_action <<looping>> : Looping (4 frames, 1600ms)

' ── Awaken: stays in idle, plays renderer-only waking_up animation ──
idle -[#green,dashed]-> idle : SessionStart\n//awaken//\n(plays waking_up animation)

' ── Hook-driven transitions (any state → target) ──
idle --> working : UserPromptSubmit\n//working_started//
idle --> waiting_for_action : Notification\n//action_requested//
idle --> planning : UserPromptSubmit (plan)\n//planning_started//

' ── Permission prompt during active work ──
working --> waiting_for_action : Notification\n//action_requested//
planning --> waiting_for_action : Notification\n//action_requested//

' ── Stop returns to idle from active states ──
working -[#red]-> idle : Stop\n//work_finished//
planning -[#red]-> idle : Stop\n//work_finished//

' ── Awaken suppressed during ALL non-zero states ──
working -[#grey,dotted]-> working : SessionStart\n//awaken// (suppressed)
planning -[#grey,dotted]-> planning : SessionStart\n//awaken// (suppressed)
waiting_for_action -[#grey,dotted]-> waiting_for_action : SessionStart\n//awaken// (suppressed)

' ── falling_asleep ignored in all non-idle states ──
working -[#grey,dotted]-> working : SessionEnd\n//falling_asleep// (ignored)
planning -[#grey,dotted]-> planning : SessionEnd\n//falling_asleep// (ignored)
waiting_for_action -[#grey,dotted]-> waiting_for_action : SessionEnd\n//falling_asleep// (ignored)

' ── dismiss unconditionally removes project from any state ──
idle -[#red,bold]-> [*] : UI Dismiss\n//dismiss//
working -[#red,bold]-> [*] : UI Dismiss\n//dismiss//
planning -[#red,bold]-> [*] : UI Dismiss\n//dismiss//
waiting_for_action -[#red,bold]-> [*] : UI Dismiss\n//dismiss//

' ── action_completed restores previous active state ──
waiting_for_action -[#purple,dashed]-> working : PostToolUse(any tool)\n//action_completed//\n(restore)
waiting_for_action -[#purple,dashed]-> planning : PostToolUse(any tool)\n//action_completed//\n(restore)

' ── action_completed from a background subagent wakes the idle pet ──
idle -[#purple,dashed]-> working : PostToolUse(agent_id)\n//action_completed//\n(background subagent)
idle -[#purple,dashed]-> planning : PostToolUse(agent_id, plan)\n//action_completed//\n(background subagent)

' ── Stop ignored in waiting_for_action ──
waiting_for_action -[#grey,dotted]-> waiting_for_action : Stop\n//work_finished// (ignored)

' ── waiting_for_action exits via UserPromptSubmit ──
waiting_for_action --> working : UserPromptSubmit\n//working_started//
waiting_for_action --> planning : UserPromptSubmit (plan)\n//planning_started//

note right of idle
  Any event can arrive in **any** state.
  **action_requested** works from idle,
  working, and planning (via ActiveState).
  Transitions not all shown from idle for clarity,
  but the pet accepts all events regardless
  of current state (no guards), except:
  **awaken** is ignored in all non-idle
  states via the whitelist pattern (only
  IdleState overrides onAwaken).
  **falling_asleep** removes the project
  only in idle; ignored in all other states
  (working, planning, waiting_for_action).
  **dismiss** unconditionally removes the
  project from any state (UI-triggered).
  **work_finished** is ignored in
  waiting_for_action; transitions to idle
  from working and planning.
  **action_completed** is ignored in idle
  unless tagged with agent_id (background
  subagent) — then it wakes the pet to
  working/planning.
  Debounce: 300ms collapses rapid events.
end note

@enduml


@startuml code-pet-events
title Code Pet — Hook Events to States

skinparam componentStyle rectangle

package "Claude Code Hooks" {
  [SessionStart] as SS
  [SessionEnd] as SE
  [UserPromptSubmit] as PS
  [Notification] as NOTIF
  [PostToolUse] as PTU
  [Stop] as STOP
}

package "Pet States" {
  [working] #D4E6F1
  [planning] #D4E6F1
  [waiting_for_action] #D4E6F1
  [idle] #D4E6F1
}

SS --> [idle] : when zero state\n(plays waking_up animation)
SE -[#grey,dotted]-> [idle] : removes project\nonly in idle
PS --> [working] : normal mode
PS --> [planning] : plan mode
NOTIF --> [waiting_for_action] : permission_prompt
PTU --> [working] : any tool\n(restore)
PTU --> [planning] : any tool\n(restore)
STOP --> [idle] : always

note bottom of SS
  //awaken// suppressed when pet has
  any active state (working, planning,
  waiting_for_action). When idle/fresh,
  stays in idle and plays renderer-only
  waking_up animation.
end note

note bottom of SE
  //falling_asleep// removes the project
  only in idle; ignored in all other states
  (working, planning, waiting_for_action).
end note

legend right
  | Color | Meaning |
  | <#D4E6F1> | Server-side state |
end legend

@enduml
